# GenAI-Inventory-Intelligence-System

./: .gitignore  QUICKSTART.md  README.md  README_DEMO.md  SETUP_INSTRUCTIONS.md  START_HERE.md  package-lock.json  package.json
backend/: .env.example  AGENTIC_AI_SYNC_AUDIT.md  Dockerfile  README.md  SYNC_VERIFICATION_COMPLETE.md  alembic.ini  demo_test.ps1  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260705_0001_initial_schema.py  20260705_0002_analytics_tables.py  20260706_0003_smart_inventory_actions.py  20260707_0004_realms_rbac.py  20260708_0005_replace_warehouse_stock_with_inventory_stock.py  20260709_0005_donation_store_scope.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  industries.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  analytics_data.py  business_data.py  conversation.py  user.py
backend/app/prompts/: executive_summary.md  inventory_agent.md  morning_brief.md  nl_to_sql.md  recommendations.md  root_cause_analysis.md  (+1 more)
backend/scripts/: complete_demo_setup.ps1  create_demo_user.py  generate_demo_data.py  generate_demo_data_simple.py  run_simulation.ps1  run_simulation.py  seed_demo.ps1  seed_demo.sh  seed_mock_data.py  seed_production_data.py  test_models.py  test_recommendations.py  verify_setup.py
backend/tests/: __init__.py  conftest.py  test_action_engine.py  test_business_context.py  test_langgraph_workflow.py  test_llm_client.py  test_prompts.py
lib/: api.ts  (+3 more)
(+79 files in other folders)
