[project]
name = "genai-inventory-intelligence-backend"
version = "0.1.0"
description = "FastAPI backend and AI orchestration layer for a retail inventory GenAI copilot."
requires-python = ">=3.11"
dependencies = [
  "alembic==1.13.3",
  "bcrypt==4.0.1",
  "email-validator==2.2.0",
  "fastapi==0.115.6",
  "groq==0.13.1",
  "langgraph==0.2.60",
  "openai==1.58.1",
  "passlib[bcrypt]==1.7.4",
  "psycopg2-binary==2.9.10",
  "pydantic-settings==2.7.1",
  "python-dotenv==1.0.1",
  "python-jose[cryptography]==3.3.0",
  "sqlalchemy==2.0.36",
  "uvicorn[standard]==0.34.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
